<resources>
    <string name="app_name">DistrictFood</string>
    <string name="title_liked">Закладки</string>
    <string name="title_dashboard">Главная</string>
    <string name="title_map">Карта</string>
    <string name="title_profile">Профиль</string>


    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="sign_out">Sign Out</string>
    <string name="google_title_text">Google Sign In</string>
    <string name="disconnect">Disconnect</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="firebase_status_fmt">Firebase UID: %s</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>
    <string name="hint_email">Email</string>\
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="verify_email">Verify</string>
    <string name="reload">Reload</string>
</resources>