<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_liked">

    <fragment
        android:id="@+id/navigation_liked"
        android:name="com.example.districtfood.ui.liked.LikedFragment"
        android:label="@string/title_liked"
        tools:layout="@layout/fragment_liked" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.districtfood.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_map"
        android:name="com.example.districtfood.ui.map.MapFragment"
        android:label="@string/title_map"
        tools:layout="@layout/fragment_map" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.districtfood.ui.profile.EmailPasswordFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />
</navigation>